# cpulang

./: .clang-format  CMakeLists.txt  README.md  compiler.py  grammar.lark  lib.cpp  test.cpp
examples/blocks/: DDR5.cpu  MemoryControllerDispatcher.cpu  MemoryControllerSingle.cpu  blks.cpu  cache.cpu  container.cpu  pipeline.cpu
examples/cpu/: Core.cpu  DDR5.cpu  InstructionFetcher.cpu  MMU.cpu  MemoryControllerDispatcher.cpu  MemoryControllerSingle.cpu  RegisterSet.cpu  cache.cpu  config.cpu  cpu_container.cpu  instruction_kind_t.cpu  pipeline.cpu
examples/verilog/: clocks.v
inc/: cpp.hpp
tests/: .gitignore  CMakeLists.txt  input1.c  test_ddr5.cpp
